demo/src/main/java/com/example/demo/Util/Error/ExistsByData.java
package com.example.demo.Util.Error;

public class ExistsByData extends RuntimeException {
    public ExistsByData(String message){
        super(message);
    }
}

